plugins/groovy/testdata/highlighting/AnonymousClassShouldImplementMethods.groovy
import java.awt.event.ActionListener

new <error descr="Method 'actionPerformed' is not implemented">ActionListener</error>(){

}